--- a/tax-d-client/pom.xml
+++ b/tax-d-client/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.taxd</groupId>
 		<artifactId>tax-d</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0</version>
 		<relativePath>../</relativePath>
 	</parent>
 
 	<groupId>org.taxd</groupId>
 	<artifactId>tax-d-client</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>tax-d-client</name>
@@ -27,6 +27,11 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.taxd</groupId>
+			<artifactId>tax-d-interface</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
